--- a/football_product3.html
+++ b/football_product3.html
@@ -364,21 +364,21 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/1410ceba-0fa6-4688-a0b7-f019ce7edc00/FCB+MNK+DF+ACDPR+SS+TOPK+3R+PM.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/1410ceba-0fa6-4688-a0b7-f019ce7edc00/FCB+MNK+DF+ACDPR+SS+TOPK+3R+PM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/327f6bdb-2973-4291-83cf-100fed81c098/FCB+MNK+DF+ACDPR+SS+TOPK+3R+PM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b22de8c6-230a-4c27-8da6-2ff25fd284a7/FCB+MNK+DF+ACDPR+SS+TOPK+3R+PM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/8d543135-e24b-4150-a41c-c80d33a51804/FCB+MNK+DF+ACDPR+SS+TOPK+3R+PM.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Football T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Nike F.C. Barcelona Academy Pro Third</h1>
+        <h2>₹ 3795.00</h2>
 
-        <p><strong>Description:</strong> The Nike Air Football T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong> More than a shirt – the Barça kit is a symbol of pride, passion, and a legacy that unites generations.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,7 +388,6 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
