--- a/basketball_product1.html
+++ b/basketball_product1.html
@@ -376,9 +376,10 @@
 
       <div class="product-details">
         <h1>Nike XXII LeBron EP</h1>
-        <h2>₹16000.00</h2>
+        <h2>₹15999.99</h2>
 
-        <p><strong>Description:</strong> Worn by the GOAT himself, inspired to inspire.</p>
+        <p><strong>Description:</strong> Command the court like the King with the LeBron 22 EP—engineered for power, precision, and all-day dominance, it's the ultimate fusion of style and performance for those who play to leave a legacy.
+</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -393,7 +394,7 @@
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="501" data-name="Nike XXII LeBron EP" data-price="16000.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="501" data-name="Nike XXII LeBron EP" data-price="15999.99">
   		        Add to Bag
 	        </button>
         </div>
