--- a/basketball_product2.html
+++ b/basketball_product2.html
@@ -376,9 +376,10 @@
 
       <div class="product-details">
         <h1>Nike Lakers '22 Jersey</h1>
-        <h2>₹5000.00</h2>
+        <h2>₹4999.99</h2>
 
-        <p><strong>Description:</strong> Stitched for victory, worn by victors. Testament to the undying love of Basketball.</p>
+        <p><strong>Description:</strong> Stand out in greatness with the white Lakers 2022 jersey—sleek, iconic, and crafted for those who embody the purity of the game and the pride of a championship legacy.
+</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +389,12 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
+            
           </div>
         </div>
 
        <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="502" data-name="Lakers '22 Jersey" data-price="5000.00">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="502" data-name="Lakers '22 Jersey" data-price="4999.99">
   		        Add to Bag
 	        </button>
         </div>
