--- a/football_product4.html
+++ b/football_product4.html
@@ -364,19 +364,19 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" alt="Nike Air Max 270" />
+        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/50a8873a-d39e-4957-a6f9-10bbecd0c044/ZM+VAPOR+16+ELITE+KM+FG.png" alt="Nike Air Max 270" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/50a8873a-d39e-4957-a6f9-10bbecd0c044/ZM+VAPOR+16+ELITE+KM+FG.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/382bd0cd-1f2c-4b8e-9ddd-c590a298029d/ZM+VAPOR+16+ELITE+KM+FG.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/bccd9efc-039f-4e59-a533-11284ae0ba0d/ZM+VAPOR+16+ELITE+KM+FG.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/ca7bbe64-be21-4555-a7b0-e3183bbc9ad1/ZM+VAPOR+16+ELITE+KM+FG.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Football T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Nike Mercurial Vapor 16 Elite "Kylian Mbappé"</h1>
+        <h2>₹ 22995.00</h2>
 
         <p><strong>Description:</strong> The Nike Air Football T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
 
@@ -388,7 +388,6 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
           </div>
         </div>
 
