--- a/football_product4.html
+++ b/football_product4.html
@@ -375,7 +375,7 @@
       </div>
 
       <div class="product-details">
-        <h1>Nike Mercurial Vapor 16 Elite "Kylian Mbappé"</h1>
+        <h1>Nike Mercurial Vapor 16 Elite "Kylian Mbappé</h1>
         <h2>₹ 22995.00</h2>
 
         <p><strong>Description:</strong> The Nike Air Football T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
