--- a/football_product4.html
+++ b/football_product4.html
@@ -378,7 +378,7 @@
         <h1>Nike Mercurial Vapor 16 Elite "Kylian Mbappé</h1>
         <h2>₹ 22995.00</h2>
 
-        <p><strong>Description:</strong> The Nike Air Football T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong> Built for players like Mbappé — where speed meets precision, and every touch changes the game.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
