--- a/basketball_product5.html
+++ b/basketball_product5.html
@@ -384,12 +384,12 @@
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">S</div>
-            <div class="size-option" onclick="selectSize(this)">M</div>
-            <div class="size-option" onclick="selectSize(this)">L</div>
-            <div class="size-option" onclick="selectSize(this)">XL</div>
-            <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
+            <div class="size-option" onclick="selectSize(this)">4</div>
+            <div class="size-option" onclick="selectSize(this)">5</div>
+            <div class="size-option" onclick="selectSize(this)">6</div>
+            <div class="size-option" onclick="selectSize(this)">7</div>
+            <div class="size-option" onclick="selectSize(this)">8</div>
+         
           </div>
         </div>
 
