--- a/football_product6.html
+++ b/football_product6.html
@@ -375,7 +375,7 @@
         <h1>Nike Mercurial Football Shinguards</h1>
         <h2>₹ 1895.00</h2>
 
-        <p><strong>Description:</strong> The Nike Air Football T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong> Lightweight and low-profile, Nike Mercurial Shinguards deliver secure protection without slowing you down — perfect for fast, fearless play.</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
