--- a/football_product5.html
+++ b/football_product5.html
@@ -383,11 +383,10 @@
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">S</div>
-            <div class="size-option" onclick="selectSize(this)">M</div>
-            <div class="size-option" onclick="selectSize(this)">L</div>
-            <div class="size-option" onclick="selectSize(this)">XL</div>
-            <div class="size-option" onclick="selectSize(this)">XXL</div>
+            <div class="size-option" onclick="selectSize(this)">2</div>
+            <div class="size-option" onclick="selectSize(this)">3</div>
+            <div class="size-option" onclick="selectSize(this)">4</div>
+            <div class="size-option" onclick="selectSize(this)">5</div>
           </div>
         </div>
 
