--- a/football_product4.html
+++ b/football_product4.html
@@ -383,11 +383,12 @@
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">S</div>
-            <div class="size-option" onclick="selectSize(this)">M</div>
-            <div class="size-option" onclick="selectSize(this)">L</div>
-            <div class="size-option" onclick="selectSize(this)">XL</div>
-            <div class="size-option" onclick="selectSize(this)">XXL</div>
+            <div class="size-option" onclick="selectSize(this)">7</div>
+            <div class="size-option" onclick="selectSize(this)">8</div>
+            <div class="size-option" onclick="selectSize(this)">9</div>
+            <div class="size-option" onclick="selectSize(this)">10</div>
+            <div class="size-option" onclick="selectSize(this)">11</div>
+	    <div class="size-option" onclick="selectSize(this)">12</div>
           </div>
         </div>
 
