--- a/basketball_product6.html
+++ b/basketball_product6.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Athletix - Cricket</title>
+  <title>IU Single Action Air Pump</title>
   <style>
     html, body {
       margin: 0;
@@ -364,36 +364,32 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" alt="Cricket T-shirt" />
+        <img id="mainImage" class="main-image" src="https://contents.mediadecathlon.com/p2439547/630b8e1d4633413f15f48cb24e16ef72/p2439547.jpg" alt="Cricket T-shirt" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://contents.mediadecathlon.com/p2439547/630b8e1d4633413f15f48cb24e16ef72/p2439547.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2439544/ee9a62653b040031ea32cebb945bf10e/p2439544.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2439545/a5adac93844d486ea2ad838b959594de/p2439545.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2439548/0df9bc23248c4d15235f7a0b9e70cae1/p2439548.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Cricket T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Decathlon IU Single Action Air Pump</h1>
+        <h2>₹199.99</h2>
 
-        <p><strong>Description:</strong> The Nike Air Cricket T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong> Power up every play with the Decathlon IU Single Action Air Pump—compact, reliable, and ready to inflate your game anytime, anywhere with smooth, effortless precision.
+</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">S</div>
-            <div class="size-option" onclick="selectSize(this)">M</div>
-            <div class="size-option" onclick="selectSize(this)">L</div>
-            <div class="size-option" onclick="selectSize(this)">XL</div>
-            <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
+            <div class="size-option" onclick="selectSize(this)">Standard</div>
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="506" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="506" data-name="IU Single Action Air Pump" data-price="199.99">
   		        Add to Bag
 	        </button>
         </div>
