--- a/cricket_product1.html
+++ b/cricket_product1.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Athletix - Cricket</title>
+  <title>PUMA RCB Crickey Jersey</title>
   <style>
     html, body {
       margin: 0;
@@ -364,7 +364,7 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" alt="Cricket T-shirt" />
+        <img id="mainImage" class="main-image" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod01/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" alt="Cricket T-shirt" />
         
         <div class="thumbnail-container">
           <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
@@ -375,10 +375,11 @@
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Cricket T-Shirt</h1>
+        <h1>PUMA RCB Cricket Jersey</h1>
         <h2>$129.99</h2>
 
-        <p><strong>Description:</strong> The Nike Air Cricket T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong> Show your bold loyalty with the Puma RCB Cricket Jersey—crafted for comfort, built for performance, and styled for fans who bleed red and gold with every run, wicket, and roar.
+</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
