--- a/men_athletix.html
+++ b/men_athletix.html
@@ -293,10 +293,10 @@
             </div>
             <div class="product-card">
                 <a href="men_product2.html">
-                    <img src="product2.jpg" alt="Training Shoes">
-                    <h3>Real Madrid 99/00 Home Jersey</h3>
+                    <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/bba09c80cdf3416c9957d5ea0dee0738_9366/Real_Madrid_24-25_Home_Jersey_White_IU5011_HM1.jpg" alt="Training Shoes">
+                    <h3>Real Madrid 24/25 Home Jersey</h3>
                 </a>
-                <p>₹5,299</p>
+                <p> ₹4799.50</p>
             </div>
             <div class="product-card">
                 <a href="men_product3.html">
