--- a/cricket_product1.html
+++ b/cricket_product1.html
@@ -367,16 +367,16 @@
         <img id="mainImage" class="main-image" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod01/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" alt="Cricket T-shirt" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod01/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod03/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod04/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/607346/01/mod09/fnd/IND/fmt/png/PUMA-x-RCB-2025-Men's-Official-Match-Jersey" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
         <h1>PUMA RCB Cricket Jersey</h1>
-        <h2>$129.99</h2>
+        <h2>₹4999.99</h2>
 
         <p><strong>Description:</strong> Show your bold loyalty with the Puma RCB Cricket Jersey—crafted for comfort, built for performance, and styled for fans who bleed red and gold with every run, wicket, and roar.
 </p>
@@ -389,12 +389,12 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
+            
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="601" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="601" data-name="PUMA RCB Cricket Jersey" data-price="4999.99">
   		        Add to Bag
 	        </button>
         </div>
