--- a/cricket_product2.html
+++ b/cricket_product2.html
@@ -370,13 +370,13 @@
           <img class="thumbnail active" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/107699/03/sv01/fnd/IND/fmt/png/24-FH-Rubber-Cricket-Shoes" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
           <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/107699/03/sv02/fnd/IND/fmt/png/24-FH-Rubber-Cricket-Shoes" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
           <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/107699/03/sv04/fnd/IND/fmt/png/24-FH-Rubber-Cricket-Shoes" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/107699/03/bv/fnd/IND/fmt/png/24-FH-Rubber-Cricket-Shoes" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Cricket T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>PUMA '24 FH Rubber Cricket Shoes</h1>
+        <h2>₹5949.99</h2>
 
         <p><strong>Description:</strong> The Nike Air Cricket T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
 
@@ -388,12 +388,12 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
+            
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="602" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="602" data-name="PUMA '24 FH Rubber Cricket Shoes" data-price="5949.99">
   		        Add to Bag
 	        </button>
         </div>
