--- a/men_athletix.html
+++ b/men_athletix.html
@@ -289,63 +289,63 @@
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/44429dd8-0c30-4a38-8aef-03183c273413/AS+M+NK+DF+STRK%2B+SS+TOP.png" alt="Running Shoes">
                     <h3>Nike Perform Tee</h3>
                 </a>
-                <p>₹6,499</p>
+                <p> ₹6,499</p>
             </div>
             <div class="product-card">
                 <a href="men_product2.html">
                     <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/bba09c80cdf3416c9957d5ea0dee0738_9366/Real_Madrid_24-25_Home_Jersey_White_IU5011_HM1.jpg" alt="Training Shoes">
                     <h3>Real Madrid 24/25 Home Jersey</h3>
                 </a>
-                <p> ₹4799.50</p>
+                <p> ₹4,799</p>
             </div>
             <div class="product-card">
                 <a href="men_product3.html">
-                    <img src="product3.jpg" alt="Casual Shoes">
-                    <h3>Manchester United UBP Tee</h3>
+                    <img src="https://assets.adidas.com/images/h_2000,f_auto,q_auto,fl_lossy,c_fill,g_auto/abd6cdc8afcd418ca600e2bd42108700_9366/Arsenal_UBP_Tee_Burgundy_JN1964_HM1.jpg" alt="Casual Shoes">
+                    <h3>Arsenal UBP Tee</h3>
                 </a>
-                <p>₹3,999</p>
+                <p> ₹3,899</p>
             </div>
             <div class="product-card">
                 <a href="men_product4.html">
-                    <img src="product4.jpg" alt="High Tops">
-                    <h3>High-Top Sneakers</h3>
+                    <img src="https://static.nike.com/a/images/w_1280,q_auto,f_auto/qhkqa20avfhumxwky4rq/air-jordan-1-high-travis-scott-release-date.jpg" alt="High Tops">
+                    <h3>Air Jordan I High Travis Scott's Sneakers</h3>
                 </a>
-                <p>₹4,799</p>
+                <p> ₹14,980.11</p>
             </div>
             <div class="product-card">
                 <a href="men_product5.html">
-                    <img src="product5.jpg" alt="Sliders">
-                    <h3>Brain Dead Knot Polo Shirt</h3>
+                    <img src="https://media.darveys.com/catalog/product/c/l/clot_050525_104471_1.jpg" alt="Sliders">
+                    <h3>Balenciaga Black Crewneck Logo T-shirt</h3>
                 </a>
-                <p>₹1,499</p>
+                <p> ₹53,500.41</p>
             </div>
             <div class="product-card">
                 <a href="men_product6.html">
-                    <img src="product6.jpg" alt="Cricket Shoes">
-                    <h3>Nike Club Fleece</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/86c996f0-7c12-4c07-8217-3179d9083944/M+J+AIR+JDN+WM+TOKYO+FLC+PO.png" alt="Cricket Shoes">
+                    <h3>Air Jordan Pullover Hoodie</h3>
                 </a>
-                <p>₹5,999</p>
+                <p> ₹5,995.00</p>
             </div>
             <div class="product-card">
                 <a href="men_product7.html">
-                    <img src="product7.jpg" alt="Gym Trainers">
-                    <h3>Gym Trainers</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/f9a8deaa-87f2-4191-92b8-c7661aae48de/AIR+MONARCH+IV.png" alt="Gym Trainers">
+                    <h3>Nike Air Monarch Workout Shoes</h3>
                 </a>
-                <p>₹4,299</p>
+                <p> ₹5,295.00</p>
             </div>
             <div class="product-card">
                 <a href="men_product8.html">
-                    <img src="product8.jpg" alt="Basketball Shoes">
-                    <h3>Basketball Shoes</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/191eeea5-8a43-4c40-b9a1-6c3735e97f82/SEL+MNK+DF+JSY+JAMES.png" alt="Basketball Shoes">
+                    <h3>Lakers jersey</h3>
                 </a>
-                <p>₹6,799</p>
+                <p> ₹7,995.00</p>
             </div>
             <div class="product-card">
                 <a href="men_product9.html">
-                    <img src="product9.jpg" alt="Formal Sneakers">
-                    <h3>Jordan Brooklyn Fleece</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b09707fa-7e12-487c-8d4f-27938c0c40b6/M+NK+TCH+FLC+FZ+WR+HOODIE.png" alt="Formal Sneakers">
+                    <h3>Nike Tech Men's Full-Zip Windrunner Hoodie</h3>
                 </a>
-                <p>₹3,499</p>
+                <p> ₹11,556.09</p>
             </div>
         </div>
     </div>
