--- a/men_athletix.html
+++ b/men_athletix.html
@@ -307,45 +307,45 @@
             </div>
             <div class="product-card">
                 <a href="men_product4.html">
-                    <img src="https://static.nike.com/a/images/w_1280,q_auto,f_auto/qhkqa20avfhumxwky4rq/air-jordan-1-high-travis-scott-release-date.jpg" alt="High Tops">
-                    <h3>Air Jordan I High Travis Scott's Sneakers</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/6c3a1f93-5414-4f4f-a4e1-cc232678e6d2/M+J+BRK+FLC+SHORT+LB.png" alt="High Tops">
+                    <h3>Jordan Brooklyn Fleece Men's Shorts</h3>
                 </a>
-                <p> ₹14,980.11</p>
+                <p> ₹2,695</p>
             </div>
             <div class="product-card">
                 <a href="men_product5.html">
                     <img src="https://media.darveys.com/catalog/product/c/l/clot_050525_104471_1.jpg" alt="Sliders">
                     <h3>Balenciaga Black Crewneck Logo T-shirt</h3>
                 </a>
-                <p> ₹53,500.41</p>
+                <p> ₹53,500</p>
             </div>
             <div class="product-card">
                 <a href="men_product6.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/86c996f0-7c12-4c07-8217-3179d9083944/M+J+AIR+JDN+WM+TOKYO+FLC+PO.png" alt="Cricket Shoes">
                     <h3>Air Jordan Pullover Hoodie</h3>
                 </a>
-                <p> ₹5,995.00</p>
+                <p> ₹5,995</p>
             </div>
             <div class="product-card">
                 <a href="men_product7.html">
-                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/f9a8deaa-87f2-4191-92b8-c7661aae48de/AIR+MONARCH+IV.png" alt="Gym Trainers">
-                    <h3>Nike Air Monarch Workout Shoes</h3>
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/55820803-0d4e-429a-a3fb-ff70296cedc3/AS+M+NP+DF+TOP+SL+TIGHT.png" alt="Gym Trainers">
+                    <h3>Nike Pro Men's Dri-FIT Tight Sleeveless Fitness Top</h3>
                 </a>
-                <p> ₹5,295.00</p>
+                <p> ₹1,495</p>
             </div>
             <div class="product-card">
                 <a href="men_product8.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/191eeea5-8a43-4c40-b9a1-6c3735e97f82/SEL+MNK+DF+JSY+JAMES.png" alt="Basketball Shoes">
                     <h3>Lakers jersey</h3>
                 </a>
-                <p> ₹7,995.00</p>
+                <p> ₹7,995</p>
             </div>
             <div class="product-card">
                 <a href="men_product9.html">
                     <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/b09707fa-7e12-487c-8d4f-27938c0c40b6/M+NK+TCH+FLC+FZ+WR+HOODIE.png" alt="Formal Sneakers">
                     <h3>Nike Tech Men's Full-Zip Windrunner Hoodie</h3>
                 </a>
-                <p> ₹11,556.09</p>
+                <p> ₹11,556</p>
             </div>
         </div>
     </div>
