--- a/men_athletix.html
+++ b/men_athletix.html
@@ -307,7 +307,7 @@
             </div>
             <div class="product-card">
                 <a href="men_product4.html">
-                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/6c3a1f93-5414-4f4f-a4e1-cc232678e6d2/M+J+BRK+FLC+SHORT+LB.png" alt="High Tops">
+                    <img src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco,u_126ab356-44d8-4a06-89b4-fcdcc8df0245,c_scale,fl_relative,w_1.0,h_1.0,fl_layer_apply/b19f0cb8-9214-4013-a55a-f2e8504a7d0a/M+J+BRK+FLC+SHORT+LB.png">
                     <h3>Jordan Brooklyn Fleece Men's Shorts</h3>
                 </a>
                 <p> ₹2,695</p>
