--- a/cricket_product4.html
+++ b/cricket_product4.html
@@ -3,7 +3,7 @@
 <head style="background-color: white;">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Athletix - Cricket</title>
+  <title>Decathlon EW 900 Adult G3 Cricket Bat</title>
   <style>
     html, body {
       margin: 0;
@@ -364,21 +364,22 @@
 
     <div class="product-container">
       <div class="product-images">
-        <img id="mainImage" class="main-image" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" alt="Cricket T-shirt" />
+        <img id="mainImage" class="main-image" src="https://contents.mediadecathlon.com/p2896670/0d06f395d73bd3a6cf804eeff3e18698/p2896670.jpg" alt="Cricket T-shirt" />
         
         <div class="thumbnail-container">
-          <img class="thumbnail active" src="https://static.nike.com/a/images/t_PDP_1728_v1/f_auto,q_auto:eco/fb0e75cf-13ce-40bb-99bf-2406fa913844/AS+M+NK+DF+RISE+365+RUN+ENERGY.png" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/ikryvczkqlnhq1wqkqgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
-          <img class="thumbnail" src="https://static.nike.com/a/images/t_PDP_1280_v1/f_auto,q_auto:eco/awjog8bx0dhn6xirbxgx/air-max-270-mens-shoes-KkLcGR.png" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
+          <img class="thumbnail active" src="https://contents.mediadecathlon.com/p2896670/0d06f395d73bd3a6cf804eeff3e18698/p2896670.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Front View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2896673/940eb2215ed6feb63e9c0cf0e26f61c4/p2896673.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Side View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2896672/2e01467322df7b071416ef112c3ba92e/p2896672.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Top View">
+          <img class="thumbnail" src="https://contents.mediadecathlon.com/p2896671/41ea17001ca4fb450c80cc48521d7d2b/p2896671.jpg" onclick="changeImage(this)" alt="Nike Air Max 270 Back View">
         </div>
       </div>
 
       <div class="product-details">
-        <h1>Nike Air Cricket T-Shirt</h1>
-        <h2>$129.99</h2>
+        <h1>Decathlon EW 900 Adult G3 Cricket Bat</h1>
+        <h2>₹19999.99</h2>
 
-        <p><strong>Description:</strong> The Nike Air Cricket T-Shirt delivers a fresh take on the iconic Air Max series with its pure cotton fabric made for all-day comfort. The breathable material provides a lightweight feel.</p>
+        <p><strong>Description:</strong> Unleash elite strokes with the Decathlon English Willow EW 900 Bat—precision-crafted for powerful shots, perfect balance, and the confidence to dominate every pitch like a pro.
+</p>
 
         <div class="size-selector">
           <strong>Select Size:</strong>
@@ -388,12 +389,12 @@
             <div class="size-option" onclick="selectSize(this)">L</div>
             <div class="size-option" onclick="selectSize(this)">XL</div>
             <div class="size-option" onclick="selectSize(this)">XXL</div>
-            <div class="size-option" onclick="selectSize(this)">Too Fat</div>
+            
           </div>
         </div>
 
         <div class="add-to-bag-container">
-          <button class="add-to-bag" onclick="addToCart(this)" data-id="604" data-name="Nike Kids T-shirt" data-price="129.99">
+          <button class="add-to-bag" onclick="addToCart(this)" data-id="604" data-name="Decathlon EW 900 Adult G3 Cricket Bat" data-price="19999.99">
   		        Add to Bag
 	        </button>
         </div>
