--- a/cricket_product4.html
+++ b/cricket_product4.html
@@ -384,11 +384,8 @@
         <div class="size-selector">
           <strong>Select Size:</strong>
           <div class="size-options">
-            <div class="size-option" onclick="selectSize(this)">S</div>
-            <div class="size-option" onclick="selectSize(this)">M</div>
-            <div class="size-option" onclick="selectSize(this)">L</div>
-            <div class="size-option" onclick="selectSize(this)">XL</div>
-            <div class="size-option" onclick="selectSize(this)">XXL</div>
+            <div class="size-option" onclick="selectSize(this)">STD</div>
+            
             
           </div>
         </div>
